--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="images/hero.svg" />
-        <h1>heading inside header</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg" />
+        <h1 class="hero-heading">hunar jain the
+            <span class="heading-inverted">
+                web developer
+            </span>
+        </h1>
     </header>
 
     <hr>
