--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Huanr's component library</h1>
+    <h1>Hunar's component library</h1>
     <p>I am attending neog.camp and I want to make a library which would make all my projects look good and consistent.
     </p>
 
@@ -105,14 +105,18 @@
 
     <hr>
     <h2>@section</h2>
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>This will have white background</p>
+        </div>      
     </section>
 
-    <section>
-        <h3>off white section</h3>
-        <p>This will have gray background</p>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off white section</h1>
+            <p>This will have gray background</p>
+        </div>
     </section>
 
     <footer>
