--- a/index.html
+++ b/index.html
@@ -119,12 +119,27 @@
         </div>
     </section>
 
-    <footer>
-        <div>Some small heading inside footer</div>
-        <ul>
-            <li>socialone</li>
-            <li>socialTwo</li>
-            <li>socialThree</li>
+    <hr>
+    
+    <h2>@footer</h2>
+    <footer class="footer">
+        <div class="footer-header">Some small heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    socialone
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/"> 
+                    socialTwo
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/">
+                    socialThree
+                </a>
+            </li>
         </ul>
     </footer>
 
