--- a/lib/components.html
+++ b/lib/components.html
@@ -95,7 +95,7 @@
     <h2>@header</h2>
 
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg" />
+        <img class="hero-img" src="/images/hero.svg" />
         <h1 class="hero-heading">hunar jain the
             <span class="heading-inverted">
                 web developer
