--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | Hunar Jain</title>
+    <title>projects | Hunar Jain</title>
     <link href="styles.css" rel="stylesheet" />
-
 </head>
-
 <body>
     <nav class="navigation container">
         <div class="nav-brand">Hunar Jain</div>
         <ul class="list-non-bullet nav-pills">
-            <li class="list-item-inline link-active">
+            <li class="list-item-inline">
                 <a class="link" href="/">home</a>
             </li>
-            <li class="list-item-inline">
+            <li class="list-item-inline link-active">
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
@@ -25,40 +22,8 @@
         </ul>
     </nav>
 
-    <header class="hero">
-        <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">hunar jain the
-            <span class="heading-inverted">
-                web developer
-            </span>
-        </h1>
-    </header>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>technologies</h1>
-            <p>I am familiar with HTML5, CSS3,
-                Git, JavaScript, NodeJS, Angular,
-                ElasticSearch, Cloud Firestore
-            </p>
-        </div>
-    </section>
-    <section class="section">
-        <div class="container container-center">
-            <h1>projects</h1>
-            <p>I like to showcase my work and you can find my past projects hosted online</p>
-            <a class="link link-primary" href="/">See Projects</a>
-        </div>      
-    </section>
 
-    <section class="section ow">
-        <div class="container container-center">
-            <h1>blogs</h1>
-            <p>I like to write techinal and non-technical blogs.
-            </p>
-            <a class="link link-primary" href="/">Browse Blogs</a>
-        </div>
-    </section>
 
 
     <footer class="footer">
@@ -82,5 +47,4 @@
         </ul>
     </footer>
 </body>
-
 </html>
