--- a/blogs.html
+++ b/blogs.html
@@ -21,9 +21,21 @@
             </li>
         </ul>
     </nav>
+    <header class="hero">
+        <img class="hero-img" src="images/blogs.svg" />
+        <h1 class="hero-heading">my
+            <span class="heading-inverted">
+                library
+            </span>
+        </h1>
+    </header>
 
+    <ul class="list-non-bullet">
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
 
-
+    </ul>
 
 
 
