--- a/blogs.html
+++ b/blogs.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blogs | Hunar Jain</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand">Hunar Jain</div>
@@ -30,12 +32,37 @@
         </h1>
     </header>
 
-    <ul class="list-non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
+    <div class="container container-center">
+        <ul class="list-non-bullet">
+            <li>
+                <h1>
+                    an introduction to serverless functions
+                </h1>
+                <small>
+                    14th November 2020
+                </small>
+                <p>
+                    A serverless function is a programmatic function written by a software developer for a single
+                    purpose. It's then hosted and maintained on infrastructure by cloud...
+                </p>
+                <a class="link link-primary" href="/blog-one.html">Read More</a>
+            </li>
+            
+                <h1>
+                    getting started with Elasticsearch
+                </h1>
+                <small>
+                    20th November 2020
+                </small>
+                <p>
+                    Search and Analytics are key features of modern software applications. Scalability and the capability to handle large volumes of data in near real-time is a must...
+                </p>
+                <a class="link link-primary" href="/blog-two.html">Read More</a>
+            </li>
 
-    </ul>
+        </ul>
+    </div>
+
 
 
 
@@ -48,7 +75,7 @@
                 </a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/hunarjain09"> 
+                <a class="link" href="https://twitter.com/hunarjain09">
                     twitter
                 </a>
             </li>
@@ -60,4 +87,5 @@
         </ul>
     </footer>
 </body>
+
 </html>
