--- a/projects.html
+++ b/projects.html
@@ -31,35 +31,38 @@
         </h1>
     </header>
 
-    <ol reversed>
-        <li>
-            <h1>
-                are you a OFFICE fan?
-            </h1>
-            <small>
-                14th November 2020
-            </small>
-            <p>
-                A quiz app which test your knowledge on TV show called OFFICE. Take a dig at it and if you reach a highscore send a screenshot to me so that I can put you in the Hall of Fame.
-            </p>
-            <a class="link link-primary" href="https://repl.it/@HunarJain/Assignment-1?embed=1&output=1#index.js">Live Project</a>
-            <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markTwo">View Source</a>
-        </li>
-        <li>
-            <h1>
-                how well do you know me?
-            </h1>
-            <small>
-                14th November 2020
-            </small>
-            <p>
-                A CLI app built with <strong>nodeJs</strong> to test my friend's knowledge.
-            </p>
-            <a class="link link-primary" href="https://repl.it/@HunarJain/Ex13-Ex14-Ex15?embed=1&output=1#index.js">Live Project</a>
-            <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markOne">View Source</a>
-        </li>
+    <div class="container container-center">
+        <ol reversed>
+            <li>
+                <h1>
+                    are you a OFFICE fan?
+                </h1>
+                <small>
+                    14th November 2020
+                </small>
+                <p>
+                    A quiz app which test your knowledge on TV show called OFFICE. Take a dig at it and if you reach a highscore send a screenshot to me so that I can put you in the Hall of Fame.
+                </p>
+                <a class="link link-primary" href="https://repl.it/@HunarJain/Assignment-1?embed=1&output=1#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markTwo">View Source</a>
+            </li>
+            <li>
+                <h1>
+                    how well do you know me?
+                </h1>
+                <small>
+                    14th November 2020
+                </small>
+                <p>
+                    A CLI app built with <strong>nodeJs</strong> to test my friend's knowledge.
+                </p>
+                <a class="link link-primary" href="https://repl.it/@HunarJain/Ex13-Ex14-Ex15?embed=1&output=1#index.js">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markOne">View Source</a>
+            </li>
+        
+        </ol>
+    </div>
     
-    </ol>
 
 
     <footer class="footer">
