added first blog

--- a/blog-one.html
+++ b/blog-one.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog | Hunar Jain</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
-    
+    <nav class="navigation container">
+        <div class="nav-brand">Hunar Jain</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="container container-center">
+        <header class="hero">
+            <h1 class="hero-heading-blog">
+                an introduction to serverless functions
+            </h1>
+            <small class="hero-heading-small">
+                14th November 2020
+            </small>
+            <img class="hero-img" src="images/blog-one.svg" />
+        </header>
+        <p>
+            A <strong>serverless function </strong>  is a programmatic function written by a software developer for a single purpose. It's
+            then hosted and maintained on infrastructure by cloud computing companies. These companies take care of code
+            maintenance and execution so that developers can deploy new code faster and easier.
+        </p>
+        <p>
+
+            Because these companies automatically add server capacity when you need it and then take it away when you
+            don’t, you don’t have to worry about maintaining and scaling servers to fit the evolving needs of your
+            website or application. Instead, you can concentrate on creating newer and better products in less time.
+        </p>
+        <p>
+            Going serverless can also be cost-effective since most platforms have a pay-as-you-go model. That means you
+            only pay for the server resources you use, rather than having to eat the cost of unused resources at the end
+            of your billing cycle.
+        </p>
+
+        <p>
+
+            Before we take a look at the major cloud providers in the serverless architecture market, let’s take a
+            closer look at how you might already be benefitting from serverless functions.
+        </p>
+    </div>
+
+    <footer class="footer">
+        <div class="footer-header">social media handles</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/hunarjain007">
+                    github
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/hunarjain09">
+                    twitter
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/hunar09/">
+                    linkedin
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
+
 </html>
