--- a/blog-two.html
+++ b/blog-two.html
@@ -4,8 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blog | Hunar Jain</title>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-    
+    <nav class="navigation container">
+        <div class="nav-brand">Hunar Jain</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">home</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/projects.html">projects</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/blogs.html">blogs</a>
+            </li>
+        </ul>
+    </nav>
+    <footer class="footer">
+        <div class="footer-header">social media handles</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/hunarjain007">
+                    github
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/hunarjain09">
+                    twitter
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/hunar09/">
+                    linkedin
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
