--- a/blogs.html
+++ b/blogs.html
@@ -19,7 +19,7 @@
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline link-active">
-                <a class="link" href="/blogs.html">blog</a>
+                <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
     </nav>
