--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/blogs.html">blog</a>
+                <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
     </nav>
@@ -47,7 +47,7 @@
         <div class="container container-center">
             <h1>projects</h1>
             <p>I like to showcase my work and you can find my past projects hosted online</p>
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
         </div>      
     </section>
 
@@ -56,7 +56,7 @@
             <h1>blogs</h1>
             <p>I like to write techinal and non-technical blogs.
             </p>
-            <a class="link link-primary" href="/">Browse Blogs</a>
+            <a class="link link-primary" href="/blogs.html">Browse Blogs</a>
         </div>
     </section>
 
