--- a/blog-one.html
+++ b/blog-one.html
@@ -24,14 +24,14 @@
         </ul>
     </nav>
     <div class="container container-center">
-        <header class="hero">
-            <h1 class="hero-heading-blog">
+        <header>
+            <h1 class="blog-heading">
                 an introduction to serverless functions
             </h1>
-            <small class="hero-heading-small">
+            <small class="blog-small">
                 14th November 2020
             </small>
-            <img class="hero-img" src="images/blog-one.svg" />
+            <img class="blog-img" src="images/blog-one.svg" />
         </header>
         <p>
             A <strong>serverless function </strong>  is a programmatic function written by a software developer for a single purpose. It's
