--- a/blog-two.html
+++ b/blog-two.html
@@ -21,6 +21,34 @@
             </li>
         </ul>
     </nav>
+    <div class="container container-center">
+        <header>
+            <h1 class="blog-heading">
+            getting started with Elasticsearch
+            </h1>
+            <small class="blog-small">
+                20th November 2020
+            </small>
+            <img class="blog-img" src="images/blog-two.svg" />
+        </header>
+        <p>
+            Search and Analytics are key features of modern software applications. Scalability and the capability to handle large volumes of data in near real-time is a must for many applications such as mobile apps, web, and data analytics applications.
+        </p>
+        <p>
+            <strong>Elasticsearch </strong> is a free, open-source search and analytics engine based on the Apache Lucene library. It’s the most popular search engine and has been available since 2010. It’s developed in Java, supporting clients in many different languages, such as PHP, Python, C# and Ruby.
+        </p>
+        <h2 class="blog-heading">
+            What Does Elasticsearch Do?
+        </h2>
+        <p>
+            Elasticsearch can be used to search all kinds of data. It provides a scalable search solution, has near real-time search and support for multi tenancy. Elasticsearch takes in unstructured data from different locations, stores and indexes it according to user-specified mapping (which can also be derived automatically from data) and makes it searchable.
+        </p>
+
+        <p>
+
+            Its distributed architecture makes it possible to search and analyze huge volumes of data in near real time. It allows you to start with one machine and scale to hundreds. Elasticsearch makes it easy to run a full-featured search cluster, though running it at scale still requires a substantial level of expertise.
+        </p>
+    </div>
     <footer class="footer">
         <div class="footer-header">social media handles</div>
         <ul class="social-links list-non-bullet">
