added new projects

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,55 @@
         <ol reversed>
             <li>
                 <h1>
+                    my music recommendations
+                </h1>
+                <small>
+                    6th December 2020
+                </small>
+                <p>
+                    A react app showing my taste of music different genres.
+                </p>
+                <a class="link link-primary" href="neogcamp-mark-nine.netlify.app">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markNine-musicRecommendations">View Source</a>
+            </li><li>
+                <h1>
+                    fruit emoji interpreter
+                </h1>
+                <small>
+                    6th December 2020
+                </small>
+                <p>
+                    A react application to show the meaning of fruits emoji.
+                </p>
+                <a class="link link-primary" href="https://neogcamp-lesson-five.netlify.app">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/lesson-five-neogcamp">View Source</a>
+            </li><li>
+                <h1>
+                    Groot Translator
+                </h1>
+                <small>
+                    29th November 2020
+                </small>
+                <p>
+                    A simple JS app to translate anything into groot language. Limit is 5 requests so please use it wisely.
+                </p>
+                <a class="link link-primary" href="https://github.com/hunarjain007/neogcamp-mark7-assignment">Live Project</a>
+                <a class="link link-secondary" href="https://neogcamp-mark-seven.netlify.app">View Source</a>
+            </li><li>
+                <h1>
+                    Speak like a minion
+                </h1>
+                <small>
+                    21st November 2020
+                </small>
+                <p>
+                    A JS app to translate anyting into minion language. Hello Banana...
+                </p>
+                <a class="link link-primary" href="https://neogcamp-lesson-four.netlify.app">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/neogcamp-lesson4-banana-speak">View Source</a>
+            </li>
+            <li>
+                <h1>
                     are you a OFFICE fan?
                 </h1>
                 <small>
