--- a/projects.html
+++ b/projects.html
@@ -41,9 +41,9 @@
                     6th December 2020
                 </small>
                 <p>
-                    A react app showing my taste of music different genres.
+                    A react app showing my taste of music in different genres.
                 </p>
-                <a class="link link-primary" href="neogcamp-mark-nine.netlify.app">Live Project</a>
+                <a class="link link-primary" href="https://neogcamp-mark-nine.netlify.app">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/hunarjain007/neogCamp-markNine-musicRecommendations">View Source</a>
             </li><li>
                 <h1>
