minor-fix for links

--- a/projects.html
+++ b/projects.html
@@ -67,8 +67,8 @@
                 <p>
                     A simple JS app to translate anything into groot language. Limit is 5 requests so please use it wisely.
                 </p>
-                <a class="link link-primary" href="https://github.com/hunarjain007/neogcamp-mark7-assignment">Live Project</a>
-                <a class="link link-secondary" href="https://neogcamp-mark-seven.netlify.app">View Source</a>
+                <a class="link link-primary" href="https://neogcamp-mark-seven.netlify.app">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/hunarjain007/neogcamp-mark7-assignment">View Source</a>
             </li><li>
                 <h1>
                     Speak like a minion
